--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/postcss": "^4.1.5",
@@ -19,6 +20,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
+    "recharts": "^2.15.3",
+    "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
